welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: Unmatched closing brace '}' ignored here
	}else if ((a<0 && b<0) && negative==true) }
                                                  ^posNeg:7: error: ';' expected but 'else' found.
		}else{
                 ^posNeg:12: error: Unmatched closing brace '}' ignored here
 }
 ^